--- a/html/pages/doctor/doctor_dashboard.html
+++ b/html/pages/doctor/doctor_dashboard.html
@@ -217,6 +217,12 @@
                     </table>
                 </div>
             </div>
+            
+            <div class="row">
+                <div class="col-12">
+                    <input type="datetime-local" name="" id="">
+                </div>
+            </div>
         </div>
     </div>
 </div>
