feat: appointment feature done

--- a/html/pages/doctor/doctor_dashboard.html
+++ b/html/pages/doctor/doctor_dashboard.html
@@ -7,6 +7,7 @@
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>Patient Dashboard</title>
     <link rel="stylesheet" href="../../../css/doctor/doctor_dashboard.css">
+    <link rel="stylesheet" href="../../../css/main.css">
 </head>
 <body>
 
@@ -29,7 +30,7 @@
                     <div class="col-12">
                         <div class="mb-3">
                             <label for="doctorName" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="doctorName" placeholder="Name">
+                            <input type="text" class="form-control" id="doctorName" placeholder="Name" value="Dr.">
                         </div>
                     </div>
                     <div class="col-12 mb-3">
@@ -215,12 +216,6 @@
                         <tbody id="table-body">
                         </tbody>
                     </table>
-                </div>
-            </div>
-            
-            <div class="row">
-                <div class="col-12">
-                    <input type="datetime-local" name="" id="">
                 </div>
             </div>
         </div>
