--- a/html/pages/appointments/appointment_dashboard.html
+++ b/html/pages/appointments/appointment_dashboard.html
@@ -6,8 +6,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastr@2.1.4/build/toastr.min.css">
-    <title>Patient Dashboard</title>
+    <title>Appointments Dashboard</title>
     <link rel="stylesheet" href="../../../css/doctor/doctor_dashboard.css">
+    <link rel="stylesheet" href="../../../css/main.css">
 </head>
 <body>
 <div class="appointment-dashboard-outer">
@@ -20,29 +21,45 @@
             </div>
             <div class="row">
                 <div class="col-12 col-lg-6 doctor-form">
-                    <div class="col-12">
-                        <div class="mb-3">
-                            <label for="name" class="form-label">Patient Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Name">
+                    <div class="row">
+                        <div class="col-12 col-lg-4">
+                            <div class="mb-3">
+                                <label for="patientId" class="form-label">Patient Id</label>
+                                <select id="patientId" class="form-select">
+
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-8">
+                            <div class="mb-3">
+                                <label for="name" class="form-label">Patient Name</label>
+                                <input disabled type="text" class="form-control" id="name" placeholder="Name">
+                            </div>
                         </div>
                     </div>
                     <div class="col-12">
                         <div class="mb-3">
                             <label for="mobile" class="form-label">Patient Mobile</label>
-                            <input type="tel" class="form-control" id="mobile" placeholder="076xxxxxxx">
+                            <input disabled type="tel" class="form-control" id="mobile" placeholder="076xxxxxxx">
                         </div>
                     </div>
-                    <div class="col-12 mb-3">
-                        <label for="doctorName" class="form-label">Select Doctor</label>
-                        <select id="doctorName" class="form-select">
-                            <option value="Cardiologist"></option>
-                            <option value="Dermatologist"></option>
-                        </select>
+                    <div class="mb-3">
+                        <label for="medicalHistory" class="form-label">Medical History</label>
+                        <textarea required class="form-control" id="medicalHistory" disabled rows="6"></textarea>
                     </div>
-                    <div class="col-12">
-                        <div class="mb-3">
-                            <label for="dateTime" class="form-label">Select Date And Time</label>
-                            <input type="datetime-local" class="form-control" id="dateTime" placeholder="Address">
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
+                            <label for="doctorName" class="form-label">Select Doctor</label>
+                            <select id="doctorName" class="form-select">
+                                <option value="Cardiologist"></option>
+                                <option value="Dermatologist"></option>
+                            </select>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <div class="mb-3">
+                                <label for="dateTime" class="form-label">Select Date And Time</label>
+                                <input type="datetime-local" class="form-control" id="dateTime">
+                            </div>
                         </div>
                     </div>
                     <div class="mb-3">
