--- a/html/pages/patient/patient_dashboard.html
+++ b/html/pages/patient/patient_dashboard.html
@@ -7,14 +7,54 @@
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4b5b83994b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastr@2.1.4/build/toastr.min.css">
-    <title>Patient Dashboard</title>
+    <title>Patients</title>
     <link rel="stylesheet" href="../../../css/patient/patient_dashboard.css">
     <link rel="stylesheet" href="../../../css/main.css">
 </head>
 <body onload="loadAllPatients()">
 
+<div class="nav-area">
+    <nav class="navbar navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand" href="#">HMS</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../../pages/user/dashboard.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../pages/patient/patient_dashboard.html">Patients</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../pages/doctor/doctor_dashboard.html">Doctors</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../pages/appointments/appointment_dashboard.html">Appointments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../pages/medicine_inventory/medicine_inventory.html">Medicine Inventory</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Billing & Invoice</a>
+                    </li>
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+</div>
+
 <div class="patient-dashboard-outer">
-    <div class="patient-dashboard-inner">
+    <div class="patient-dashboard-inner ">
+        <div class="patient-dashboard-image-outer">
+            <div class="patient-dashboard-image-inner">
+                <h1 class="image-overlay-text">Patient Management</h1>
+            </div>
+        </div>
+        <div class="section-divider"></div>
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-lg-8 inner-items inner-items-left">
@@ -123,5 +163,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 <script src="../../../js/patient/patient.js"></script>
 <script src="https://kit.fontawesome.com/4b5b83994b.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/toastr@2.1.4/build/toastr.min.js"></script>
+
 </body>
 </html>
