style : add new styles and navigation links among pages

--- a/html/pages/patient/patient_dashboard.html
+++ b/html/pages/patient/patient_dashboard.html
@@ -16,7 +16,7 @@
 <div class="nav-area">
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="#">HMS</a>
+            <a class="navbar-brand" href="../../../index.html">HMS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="../../pages/medicine_inventory/medicine_inventory.html">Medicine Inventory</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Billing & Invoice</a>
+                        <a class="nav-link" href="../../pages/billing/billing_dashboard.html">Billing & Invoice</a>
                     </li>
                 </ul>
 
