--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem facere fuga ipsam quae, quasi
                         quis quisquam temporibus ullam velit? Ab amet dicta distinctio dolorem dolores doloribus ea ex,
                         fugit id ipsum officia quaerat ratione repellat sapiente sequi temporibus ut voluptatum.</p>
-                    <button class="btn btn-outline-warning"><a href="html/pages/doctor/doctor_dashboard.html">Doctor Management</a> </button>
+                    <button class="btn btn-outline-success"><a href="html/pages/appointments/appointment_dashboard.html">Appointment Management</a> </button>
                 </div>
                 <div class="col-12 col-lg-6 left">
                     <div class="appointment-management-image"></div>
@@ -213,7 +213,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem facere fuga ipsam quae, quasi
                         quis quisquam temporibus ullam velit? Ab amet dicta distinctio dolorem dolores doloribus ea ex,
                         fugit id ipsum officia quaerat ratione repellat sapiente sequi temporibus ut voluptatum.</p>
-                    <button class="btn btn-outline-info"><a href="html/pages/"></a>Medicine Inventory Management</button>
+                    <button class="btn btn-outline-info"><a href="html/pages/medicine_inventory/medicine_inventory.html">Medicine Inventory Management</a></button>
 
                 </div>
 
@@ -234,7 +234,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem facere fuga ipsam quae, quasi
                         quis quisquam temporibus ullam velit? Ab amet dicta distinctio dolorem dolores doloribus ea ex,
                         fugit id ipsum officia quaerat ratione repellat sapiente sequi temporibus ut voluptatum.</p>
-                    <button class="btn btn-outline-warning">Billing & Invoice Management</button>
+                    <button class="btn btn-outline-warning"><a href="html/pages/billing/billing_dashboard.html">Billing & Invoice Management</a></button>
                 </div>
                 <div class="col-12 col-lg-6 left">
                     <div class="billing-management-image"></div>
