style : add new styles

--- a/html/pages/user/login.html
+++ b/html/pages/user/login.html
@@ -27,7 +27,7 @@
                             <label for="password"></label>
                             <input type="text" name="email" id="password" placeholder="Enter Your Password" class="form-input">
                             <p class="forgot-pw"><a href="">Forgot Password?</a></p>
-                            <button class="btn login-btn"><a href="">Login</a></button>
+                            <button class="btn login-btn"><a href="../../../html/pages/user/dashboard.html">Login</a></button>
                             <div class="have-acc"><p >Don't Have An Account?</p></div>
                             <button class="btn register-btn"><a href="../../../html/pages/user/register.html">Register</a></button>
                         </form>
