--- a/html/pages/user/register.html
+++ b/html/pages/user/register.html
@@ -22,6 +22,8 @@
                         <h4 class="sub-title">Hospital Management System</h4>
 
                         <form action="" class="register-form">
+                            <label for="userName"></label>
+                            <input type="text" name="userName" id="userName" placeholder="Enter Your Name" class="form-input">
                             <label for="email"></label>
                             <input type="text" name="email" id="email" placeholder="Enter Your Email" class="form-input">
                             <label for="password"></label>
