--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Hospital Management System</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
@@ -230,7 +230,7 @@
             <div class="row">
 
                 <div class="col-12 col-lg-6 right description">
-                    <h1>Billing Management</h1>
+                    <h1>Billing & Invoice Management</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem facere fuga ipsam quae, quasi
                         quis quisquam temporibus ullam velit? Ab amet dicta distinctio dolorem dolores doloribus ea ex,
                         fugit id ipsum officia quaerat ratione repellat sapiente sequi temporibus ut voluptatum.</p>
